# rollup

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
docs/: CRON.md  EXAMPLES.md  SOURCES.md  TROUBLESHOOTING.md  WEB.md
docs/design/: group-llm-summaries.md
prompts/: _common.txt  essay.txt  link_roundup.txt  multi_section_digest.txt  short_update.txt  unclassified.txt
scripts/: benchmark_ollama_models.py
src/rollup/: __init__.py  __main__.py  bodies_cmd.py  cache_keys.py  classify.py  cli.py  clock.py  config.py  cron_helpers.py  discovery.py  doctor.py  effective_run.py  filter.py  final_review.py  final_review_apply.py  links.py  (+42 more)
tests/: generate_fixtures.py  test_benchmark_models.py  test_cache.py  test_classify.py  test_cli_flags.py  test_degraded_exit.py  test_discovery.py  test_doctor_cron.py  test_effective_run.py  test_examples_coverage.py  test_filter.py  test_final_review.py  test_final_review_adversarial.py  test_final_review_apply.py  test_final_review_apply_hardening.py  test_final_review_fixtures.py  test_group_summarize_hardening.py  test_group_summary_cache.py  test_grouping.py  test_hardening_contracts.py  test_html_handling.py  test_integration.py  test_links.py  test_links_sanitize.py  test_mail_readonly.py  test_manifest.py  test_ollama_stream.py  test_packaging.py  test_parse.py  test_phase2_integration.py  test_phase3_validate.py  test_ratings.py  test_reader_bodies.py  test_reader_body_store.py  test_reader_web_routes.py  test_render.py  test_run_foundation.py  test_run_index.py  test_safety.py  test_schema_v8_migration.py  (+19 more)
(+43 files in other folders)
