[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rollup"
version = "0.1.0"
description = "Local read-only Thunderbird mbox newsletter digest"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "html2text>=2024.2.26",
]

[project.optional-dependencies]
ollama = ["requests>=2.31"]
dev = ["pytest>=7.4"]

[project.scripts]
rollup = "rollup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
